--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,10 +22,12 @@ serde_json = "1.0.139"
 once_cell = "1.20.3"
 rayon = "1.10.0"
 dirs = "6.0.0"
+log = "0.4.26"
 
 [dev-dependencies]
 tempfile = "3.17.1"
 criterion = { version = "0.5.1", features = ["html_reports"] }
+env_logger = "0.11.6"
 
 [[bench]]
 name = "command_matching"
