--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,18 +7,17 @@ description = "A fuzzy command finder that suggests similar commands when a typo
 license = "MIT"
 repository = "https://github.com/rakki194/super_snoofer"
 documentation = "https://docs.rs/super_snoofer"
-homepage = "https://github.com/rakki194/super_snoofer"
-keywords = ["cli", "fuzzy-search", "command-line", "suggestions"]
+keywords = ["cli", "suggestion", "tui", "llm", "ollama"]
 categories = ["command-line-utilities", "development-tools"]
 
 [dependencies]
+anyhow = "1.0.97"
 strsim = "0.11.1"
 walkdir = "2.5.0"
 which = "7.0.2"
-anyhow = "1.0.96"
 colored = "3.0.0"
 serde = { version = "1.0.218", features = ["derive"] }
-serde_json = "1.0.139"
+serde_json = "1.0.140"
 once_cell = "1.20.3"
 rayon = "1.10.0"
 dirs = "6.0.0"
@@ -27,7 +26,14 @@ fancy-regex = "0.14.0"
 humantime = "2.1.0"
 rand = "0.9.0"
 env_logger = "0.11.6"
-chrono = "0.4.35"
+chrono = "0.4.40"
+ratatui = { version = "0.29.0", features = ["all-widgets"] }
+crossterm = "0.28.1"
+tokio = { version = "1.43.0", features = ["full"] }
+ollama-rs = "0.2.6"
+async-trait = "0.1.87"
+futures = "0.3.31"
+clap = { version = "4.5", features = ["derive"] }
 
 [dev-dependencies]
 tempfile = "3.17.1"
