--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,9 @@ tokio = { version = "1.43.0", features = ["full"] }
 ollama-rs = "0.2.6"
 async-trait = "0.1.87"
 futures = "0.3.31"
-clap = { version = "4.5", features = ["derive"] }
+futures-util = "0.3.31"
+clap = { version = "4.5.31", features = ["derive"] }
+reqwest = { version = "0.12.12", features = ["json", "stream"] }
 
 [dev-dependencies]
 tempfile = "3.17.1"
